--- a/ProjectJMM/Views/Shared/_Layout.cshtml
+++ b/ProjectJMM/Views/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Item" asp-action="Index">Item</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="Index">Expense</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
