--- a/ProjectJMM/Views/Category/Create.cshtml
+++ b/ProjectJMM/Views/Category/Create.cshtml
@@ -1,30 +1,22 @@
-﻿@model ProjectJMM.Models.Expense
+﻿@model ProjectJMM.Models.ExpenseCategory
 <form method="post" asp-action="Create">
     <div class="border p-3">
         <div class="form-group row">
-            <h2 class="text-black-50 pe-lg-3">Add Item</h2>
+            <h2 class="text-black-50 pe-lg-3">Add Category</h2>
         </div>
         <div class="row">
             <div class="col-12">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="ExpenseName"></label>
+                        <label asp-for="CategoryType"></label>
                     </div>
-                    <div class="col-4">
-                        <label asp-for="Amount"></label>
-                    </div>
-                    
+                   
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="ExpenseName" class="form-control" />
+                        <input asp-for="CategoryType" class="form-control" />
 
                     </div>
-                    <div class="col-4">
-                        <input asp-for="Amount" class="form-control" />
-
-                    </div>
-                    
                 </div>
                 <div class="from-group row">
                     <div class="col-8 ofset-2 row">
