--- a/ProjectJMM/Views/Expense/Index.cshtml
+++ b/ProjectJMM/Views/Expense/Index.cshtml
@@ -3,42 +3,42 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-success">ExpenseList</h2>
+            <h2 class="text-primary">Expense List</h2>
         </div>
-        <div class="col-6 text-center">
-            <a asp-controller="Expense" asp-action="Create" class="btn btn-dark">Create Expense</a>
+        <div class="col-6" style="text-align:right;">
+            <a asp-controller="Expense" asp-action="Create" class="btn btn-primary">Create New Expense</a>
         </div>
     </div>
     <br />
-
     @if (Model.Count() > 0)
     {
-        <table class="table table-bordered table-striped" style="width:90%">
+        <table class="table table-bordered tabletable-striped" style="width:100%">
             <thead>
                 <tr>
-                   @* <th>
-                        Id
-                    </th>*@
-                    <th>
-                        ExpenseName
-                    </th>
-                    <th>
-                        Amount
-                    </th>
+                    <th>ID</th>
+                    <th>Expense Name</th>
+                    <th>Amount</th>
+                    <th>Changes</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var expense in Model)
                 {
                     <tr>
-@*                        <td width="40%">@item.Id</td>
-*@                        <td width="40%">@expense.ExpenseName</td>
-                        <td width="40%">@expense.Amount</td>
+                        <td width="10%">@expense.Id</td>
+                        <td width="30%">@expense.ExpenseName</td>
+                        <td width="10%">@expense.Amount</td>
+                        <td width="20%">
+                            <a asp-controller="Expense" asp-action="Update" asp-route-id="@expense.Id" class="btn btn-info">Update</a>
+                            <a asp-controller="Expense" asp-action="Delete" class="btn btn-danger" asp-route-id="@expense.Id">Delete</a>
+                        </td>
                     </tr>
                 }
             </tbody>
         </table>
     }
-
-
+    else
+    {
+        <p>No Expense Created Yet</p>
+    }
 </div>
